# curso-SQLAlchemy

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
conf/: db_session.py  helpers.py
models/: __all_models.py  __init__.py  aditivo_nutritivo.py  aditivos_nutritivos_picole.py  conservante.py  conservantes_picole.py  ingrediente.py  ingredientes_picole.py  lote.py  lotes_nota_fiscal.py  nota_fiscal.py  picole.py  revendedor.py  sabor.py  tipos_embalagem.py  tipos_picole.py
repositories/: repo_aditivo_nutritivo.py  repo_conservante.py  repo_ingrediente.py  repo_lote.py  repo_notas_fiscais.py  repo_picole.py  repo_revendedor.py  repo_sabor.py  repo_tipo_embalagem.py  repo_tipo_picole.py
